--- a/lib/dedalo/component_email/html/component_email_edit.phtml
+++ b/lib/dedalo/component_email/html/component_email_edit.phtml
@@ -34,44 +34,38 @@
 
 		case $permissions>=2 :
 
-				# Button add
-				$html_content .= "<div class=\"css_button_generic btn_add_input_text\" onclick=\"component_email.add_input(this)\">";
-				$html_content .= "<div class=\"link css_email_add\"></div>";
-				$html_content .= "</div>";
+				// List of inputs
+					$dato_view = empty($dato) ? array("") : $dato;
+					$html_content .= '<ul>';
+					foreach ($dato_view as $key => $value) {
+						# Fix issues with quotes
+						$value = htmlentities($value);
 
+						$html_content .= '<li>';
 
-				# dato_view
-				$dato_view = empty($dato) ? array("") : $dato;
-				$html_content .= '<ul>';
-				foreach ($dato_view as $key => $value) {
-					# Fix issues with quotes
-					$value = htmlentities($value);
+						// input email
+						$html_content .= "<input class=\"css_email\" type=\"text\" ";
+						$html_content .= "onfocus=\"component_common.select_wrap(null,'$id_wrapper');\" ";
+						$html_content .= "onchange=\"component_email.Save(this)\" ";
+						$html_content .= "name=\"{$input_name}\" ";
+						$html_content .= "data-tipo=\"{$tipo}\" ";
+						$html_content .= "data-section_tipo=\"{$section_tipo}\" ";
+						$html_content .= "data-parent=\"{$parent}\" ";
+						$html_content .= "data-lang=\"{$lang}\" ";
+						$html_content .= "value=\"{$value}\" ";
+						$html_content .= "title=\"$html_title\" ";
+						$html_content .= "tabindex=\"1\" ";
+						$html_content .= "/>";
 
-					$html_content .= '<li>';
+						// button send to current emails
+						$html_content .= "<div class=\"css_button_generic btn_create_email_list current\" onclick=\"component_email.send_email(this, 'current')\">";
+						$html_content .= "<div class=\"css_email_send\"></div>";
+						$html_content .= "</div>";
 
-					// input email
-					$html_content .= "<input class=\"css_email\" type=\"text\" ";
-					$html_content .= "onfocus=\"component_common.select_wrap(null,'$id_wrapper');\" ";
-					$html_content .= "onchange=\"component_email.Save(this)\" ";
-					$html_content .= "name=\"{$input_name}\" ";
-					$html_content .= "data-tipo=\"{$tipo}\" ";
-					$html_content .= "data-section_tipo=\"{$section_tipo}\" ";
-					$html_content .= "data-parent=\"{$parent}\" ";
-					$html_content .= "data-lang=\"{$lang}\" ";
-					$html_content .= "value=\"{$value}\" ";
-					$html_content .= "title=\"$html_title\" ";
-					$html_content .= "tabindex=\"1\" ";
-					$html_content .= "/>";
+						$html_content .= '</li>';
 
-					// button send to current emails
-					$html_content .= "<div class=\"css_button_generic btn_create_email_list current\" onclick=\"component_email.send_email(this, 'current')\">";
-					$html_content .= "<div class=\"css_email_send\"></div>";
-					$html_content .= "</div>";
-
-					$html_content .= '</li>';
-
-				}//end foreach
-				$html_content .= '</ul>';
+					}//end foreach
+					$html_content .= '</ul>';
 
 				//# INPUT EMAIL
 				//$html_content .= "<input class=\"css_email\" type=\"text\" ";
@@ -87,27 +81,44 @@
 				//$html_content .= "tabindex=\"1\" ";
 				//$html_content .= "/>";
 
-				// button send to all emails
-				$html_content .= "<div class=\"css_button_generic btn_create_email_list\" onclick=\"component_email.send_email(this, 'all')\">";
-				$html_content .= "<div class=\"css_email_send\"></div>";
-				$html_content .= "</div>";
 
-				# MULTIPLE_DATA SEND BUTTON
-				if(isset($propiedades->multiple_data)){
-					$html_content .= "<div class=\"css_button_generic btn_create_email_list\" ";
-					$html_content .= "data-multiple_data_tipo= '$propiedades->multiple_data_tipo' ";
-					$html_content .= "onclick=\"component_email.send_multiple_email_calculation(this)\" ";
-					$html_content .= ">";
-					$html_content .= "<div class=\"css_email_multiple_send\"></div>";
-					$html_content .= "</div>";
+				// buttons
+					$html_content .= '<div class="component_butons">';
 
-					if(SHOW_DEBUG===true) {
-						#if ($tipo==='mupreva242') {
-							#unset($propiedades->css);
-							#dump($propiedades, '$propiedades->multiple_data_tipo ++ '.to_string());
-						#}
-					}
-				}
+					// Button add input
+						$html_content .= "<div class=\"css_button_generic btn_add_input_text\" onclick=\"component_email.add_input(this)\">";
+						$html_content .= "<div class=\"link css_email_add\"></div>";
+						$html_content .= "</div>";
+
+					// Button multiple email send
+						if(isset($propiedades->multiple_data)){
+
+							// Calculation multiple_data send button
+								$html_content .= "<div class=\"css_button_generic btn_create_email_list btn_create_email_list_all\" ";
+								$html_content .= "data-multiple_data_tipo= '$propiedades->multiple_data_tipo' ";
+								$html_content .= "onclick=\"component_email.send_multiple_email_calculation(this)\" ";
+								$html_content .= ">";
+								$html_content .= "<div class=\"css_email_multiple_send\"></div>";
+								$html_content .= "</div>";
+
+								if(SHOW_DEBUG===true) {
+									#if ($tipo==='mupreva242') {
+										#unset($propiedades->css);
+										#dump($propiedades, '$propiedades->multiple_data_tipo ++ '.to_string());
+									#}
+								}
+
+						}else{
+
+							// button send to all emails
+								$html_content .= "<div class=\"css_button_generic btn_create_email_list btn_create_email_list_all\" onclick=\"component_email.send_email(this, 'all')\">";
+								$html_content .= "<div class=\"css_email_send\"></div>";
+								$html_content .= "</div>";
+						}
+
+					$html_content .= '</div>';//end component_butons
+
+
 
 				#
 				# JS Init component
