Define inspector render and render inside section

--- a/lib/dedalo/inspector/css/inspector.less
+++ b/lib/dedalo/inspector/css/inspector.less
@@ -5,7 +5,7 @@
 @import "@{common_css}/library.less"; 
 
 // inspector
-	#inspector_div {
+	.wrapper_inspector {
 		display:block;
 		padding: 0px;
 		margin: 0px;
@@ -35,7 +35,7 @@
 
 
 // inspector_div_content
-	.inspector_div_content {
+	.inspector_content_data {
 		position: relative;
 		display: block;
 		margin: 0;
