--- a/lib/dedalo/page/css/main.less
+++ b/lib/dedalo/page/css/main.less
@@ -13,6 +13,7 @@
 	@import "../../section_tab/css/section_tab.less";
 
 // services
+	@import "../../inspector/css/inspector.less";
 	@import "./layout/paginator.less";
 	@import "../../search/css/search.less";
 	@import "../../services/service_autocomplete/css/service_autocomplete.less";
