--- a/lib/dedalo/page/css/layout/layout.less
+++ b/lib/dedalo/page/css/layout/layout.less
@@ -83,6 +83,7 @@
 
 		>.content_data {
 			display: flex;
+			flex-wrap: wrap;
 		}
 
 		.widget_container {
@@ -90,11 +91,43 @@
 			background-color: #fce8d2;
 			border-radius: 0.5em;
 			margin: 0.35em;
-			flex: 1 1 33.3%;
+			flex: 1 1 32.5%;
 
-			//&:first-of-type {
-			//	margin-left: 0;
-			//}
+
+			&#search_query_object_test_enviroment {
+				flex: 1 1 100%;
+				background-color: #3883fa;
+
+				>.widget_label {
+					background-color: #3275e2;
+				}
+				>.widget_body {
+					padding: 0;
+					>.body_info {
+						padding: 0;
+					}
+				}
+			}//end search_query_object_test_enviroment
+
+			&#php_info {
+				flex: 1 1 100%;
+				background-color: #9999cc;
+
+				>.widget_label {
+					background-color: #777bb3;
+				}
+
+				.editor_json {
+					//height: 100vh;
+				}
+
+				iframe.php_info_iframe {
+					margin: 0;
+					padding: 0;
+					width: 100%;
+				}
+			}//end php_info
+
 
 			>.widget_label {
 				padding: 1em;
@@ -104,6 +137,7 @@
 				//font-weight: 600;
 				text-transform: uppercase;
 				letter-spacing: 0.025em;
+				user-select: none;
 
 				&:before {
 					.icon_svg;
@@ -134,15 +168,68 @@
 				>.body_info {
 					padding-top: 0.5em;
 					padding-bottom: 0.5em;
-					font-size: 90%;
+					font-size: 0.9em;
 					color: #676464;
+
+					>h6 {
+						//font-weight: bold;
+						font-size: 1.2em;
+						padding: 0.5em;
+						padding-left: 0;
+					}
+
+					>pre {
+						margin-top: 1em;
+					}
+
+					>.command {
+						font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
+						font-size: 0.8em;
+						padding: 0.5em;
+						border: 1px solid #ccc;
+						background-color: #f5f5f5;
+						display: flex;
+						margin-bottom: 0.25em;
+
+						>.vkey {
+							font-size: 4em;
+							padding: 0.20em;
+							position: relative;
+							background-color: #ccc;
+						}
+						>.vkey_value {
+							padding: 0.5em;
+							font-size: 0.9em;
+							line-height: 1.25em;
+							word-break: break-all;
+							white-space: pre-wrap;
+							//color: #000;
+						}
+					}
 				}
 
 				>.body_response {
 					border-top: 1px solid rgba(108, 108, 108, 0.27);
 					padding-top: 0.5em;
+					padding: 0.5em;
 					margin-top: 0.5em;
 					width: 100%;
+					max-width: 100%;
+					overflow: auto;
+
+					padding: 0;
+    				margin: 0;
+    				border: none;
+
+    				>* {
+    					padding: 0.5em;
+    				}
+
+
+					//* {
+					//	max-width: 100%;
+					//	white-space: normal;
+					//}
 
 					&.preload {
 						min-height: 3em;
@@ -155,9 +242,10 @@
 
 					>pre {
 						margin-top: 1em;
-
+						white-space: pre-wrap;
 						pre {
 							white-space: initial;
+							//white-space: pre-wrap;
 						}
 					}
 
