--- a/lib/dedalo/page/css/layout/page.less
+++ b/lib/dedalo/page/css/layout/page.less
@@ -72,6 +72,7 @@ html {
 		opacity: 0;
 		transition: visibility 0.25s, height 0.25s, opacity 0.25s linear;
 		height: 0;
+		padding: 0!important;
 	}
 // hidden
 	.hidden {
