--- a/lib/dedalo/component_email/html/component_email_search.phtml
+++ b/lib/dedalo/component_email/html/component_email_search.phtml
@@ -29,6 +29,9 @@
 
 					$value = is_array($dato) ? reset($dato) : $dato;
 
+					$html_content .= '<ul>';
+					$html_content .= '<li>';
+
 					$html_content .= "<input class=\"css_email\" type=\"text\" name=\"{$search_input_name}\" ";
 					$html_content .= "id=\"{$identificador_unico}\" ";
 					$html_content .= "data-tipo=\"{$tipo}\" ";
@@ -39,6 +42,9 @@
 					$html_content .= "title=\"$html_title\" ";
 					$html_content .= "onchange=\"component_common.fix_dato(this,'{$component_name}')\" ";
 					$html_content .= "/>";
+
+					$html_content .= '</li>';
+					$html_content .= '</ul>';
 
 					# LOGICAL OPERATORS
 					#$html_content .= operator::get_search_logical_operators_html($tipo,$ar_logical_operators);
