--- a/lib/dedalo/menu/css/menu.less
+++ b/lib/dedalo/menu/css/menu.less
@@ -40,7 +40,7 @@ background-color: #FFFF00;
 @common_css: "../../common/css";
 
 // Usage
-@import "@{common_css}/library.less"; 
+@import "@{common_css}/library.less";
 
 
 
@@ -69,7 +69,8 @@ background-color: #FFFF00;
 		background: linear-gradient(to bottom, rgba(210,107,25,0.8) 0%,rgba(156,62,0,0.8) 100%) !important;
 	}
 	.menu_wrapper_debug_development {
-		background: linear-gradient(to bottom, rgba(214,21,0,0.9) 0%,rgba(135,0,13,0.9) 100%) !important; /* W3C */
+		//background: linear-gradient(to bottom, rgba(214,21,0,0.9) 0%,rgba(135,0,13,0.9) 100%) !important; /* W3C */
+		background-color: #a20401 !important;
 	}
 	.menu_wrapper_debug_master {
 		//background: linear-gradient(to bottom, rgba(44, 177, 20, 0.8) 0, rgba(12, 115, 34, 0.8) 100%) !important;
@@ -78,7 +79,7 @@ background-color: #FFFF00;
 	.menu_wrapper_global_admin {
 		//background-image: url('../../themes/default/dedalo_logo_red.svg');
 		border-top: 1px solid #f78a1c;
-	} 
+	}
 
 	/*-- Button in menu common --*/
 	#menu_wrapper .button_in_menu {
@@ -135,7 +136,7 @@ background-color: #FFFF00;
 
 
 
-// menu : Menu tree 
+// menu : Menu tree
 	@menu_bg_color_active : #ffa43d;
 	@menu_box_shadow : 5px 5px 15px rgba(0, 0, 0, 0.1);
 
@@ -208,12 +209,12 @@ background-color: #FFFF00;
 			/*left: -2px;*/
 			border: 1px solid #B4B4B4;
 			border-radius: 4px;
-			
+
 			a {
 				color: #4F4F4F;
 			}
 		}
-			
+
 		// Removes first ul top border radius
 		> li > ul  {
 			border-radius: 0px 0px 4px 4px; /* top left, top right, bottom right, bottom left */
@@ -280,7 +281,7 @@ background-color: #FFFF00;
 		    right: 8px;
 		    top: 9px;
 		    pointer-events: none;
-		
+
 		}
 
 		// arrow white on active
@@ -300,9 +301,9 @@ background-color: #FFFF00;
 		}
 
 	}//end #menu
-	
-	
-	
+
+
+
 	/*rounded corners for first and last child
 	#menu ul li:first-child {
 		border-top-left-radius: 4px;
@@ -446,23 +447,23 @@ background-color: #FFFF00;
 				&:active {
 					background-color: darken(@menu_bg_color_active, 13%) !important;
 				}
-			}			
+			}
 		}
-		
-		
+
+
 		/*
 		#menu_wrapper #current_section_label::before {
 			content: '';
 			//background-image: url("../../themes/default/glyphicons-halflings.png");
-			background-image: url("../../themes/default/icon_list.svg");			
-			margin-right: 7px;	
+			background-image: url("../../themes/default/icon_list.svg");
+			margin-right: 7px;
 			width: 14px;
 			height: 14px;
-		  	float: left; 
-		  	opacity: 1;		  
+		  	float: left;
+		  	opacity: 1;
 		}
 		*/
-		
+
 
 	/* BUTTON INSPECTOR
 	------------------------------------------------------- */
@@ -514,7 +515,7 @@ background-color: #FFFF00;
     opacity: 0.95;
     overflow: hidden;
     line-height: 24px;
-    display: flex;   
+    display: flex;
 	}
 	.debug_line_wrap a,	.debug_line_wrap span {
 		color: #dcdcdc !important;
@@ -524,11 +525,11 @@ background-color: #FFFF00;
 		padding-left: 9px;
 		padding-right: 9px;
 		display: inline;
-		line-height: 1em;		
+		line-height: 1em;
 		}
 		.debug_line_wrap a {
 			background-color: #5B5B5B;
-			margin-right: 1px;			
+			margin-right: 1px;
 			}
 			.debug_line_wrap a:hover {
 				background-color: #7E8284
@@ -652,11 +653,11 @@ background-color: #FFFF00;
 		//top: 10px;
 		//right: 65px;
 		//position: absolute;
-    	//margin-left: 0px;    
+    	//margin-left: 0px;
 
 		top: -35px;
 		right: 10px;
-		position: relative;	
+		position: relative;
 	}
 	#menu_wrapper #current_section_label {
 		display: block;
