--- a/lib/dedalo/page/css/main.less
+++ b/lib/dedalo/page/css/main.less
@@ -27,11 +27,10 @@
 	//@import "../../login/css/login.less";
 
 // components
-	/**/
 	@component_prefix : "component_";
 	@component_sufix  : "";
+	/*
 	@import "../../@{component_prefix}input_text/css/@{component_prefix}input_text@{component_sufix}.less";
-	@import "../../@{component_prefix}autocomplete_hi/css/@{component_prefix}autocomplete_hi@{component_sufix}.less";
 	@import "../../@{component_prefix}autocomplete/css/@{component_prefix}autocomplete@{component_sufix}.less";
 	@import "../../@{component_prefix}av/css/@{component_prefix}av@{component_sufix}.less";
 	//@import "../../@{component_prefix}calculation/css/@{component_prefix}calculation@{component_sufix}.less";
@@ -77,4 +76,4 @@
 	@import "../../@{component_prefix}state/css/@{component_prefix}state@{component_sufix}.less";
 	@import "../../@{component_prefix}svg/css/@{component_prefix}svg@{component_sufix}.less";
 	@import "../../@{component_prefix}text_area/css/@{component_prefix}text_area@{component_sufix}.less";
-
+	*/
