--- a/lib/dedalo/page/css/layout/layout.less
+++ b/lib/dedalo/page/css/layout/layout.less
@@ -513,6 +513,7 @@
 
 // component
 	.wrapper_component {
+		position: relative;
 
 		&.edit {
 
@@ -520,6 +521,19 @@
 
 
 		&.list {
+
+			&.component_image {
+				padding: 0;
+				background-color: #ffffff;
+				text-align: center;
+				display: block;
+				>img {
+					padding: 0;
+					height: 100%;
+					max-height: 5em;
+					width: auto;
+				}
+			}
 
 		}//end &.list
 
@@ -573,7 +587,7 @@
 					flex: 0 1;
 					padding: 0.15em;
 					border-radius: 0.25em;
-					position: relative;
+					//position: relative;
 
 					>*{
 						//margin: 0.365em;
@@ -582,9 +596,11 @@
 
 					>.close {
 						position: absolute;
-						top: -1.2em;
-						right: -1.2em;
+						top: -0.1em;
+						right: -0.4em;
 						color: #f78a1c;
+						opacity: 1;
+						z-index: 2;
 					}
 				}
 
