--- a/lib/dedalo/tools/tool_lang/css/tool_lang.less
+++ b/lib/dedalo/tools/tool_lang/css/tool_lang.less
@@ -5,11 +5,12 @@
 		display: grid;
 	    grid-template-columns: 1fr 1fr;
 	    grid-gap: 1em;
-	    background-color: #D6F737;
+	    //background-color: #D6F737;
 
 	    >select {
 			width: fit-content;
 			height: 2em;
+			font-size: 0.80em;
 	    }
 
 	    >div {
