Add ui tool description node to header

--- a/lib/dedalo/page/css/layout/layout.less
+++ b/lib/dedalo/page/css/layout/layout.less
@@ -644,6 +644,10 @@
 				>.label {
 
 				}
+
+				>.description {
+					font-weight: 100;
+				}
 			}
 
 			>.buttons {
@@ -660,9 +664,38 @@
 		}
 
 
+		// inside modal
+		//.tool_header {
+		//	background-color: #B2C8F6;
+
+			//>.label {
+//
+			//}
+
+
+		//}
+
+
 
 	}//end tool_container
 
+
+
+// modal
+	dd-modal {
+
+		.tool_header {
+
+			.label {
+
+			}
+			.description {
+				font-weight: normal;
+				font-size: 0.7em;
+				padding-top: 0.5em;
+			}
+		}
+	}
 
 
 // header_wrapper_list
