--- a/lib/dedalo/page/css/layout/layout.less
+++ b/lib/dedalo/page/css/layout/layout.less
@@ -120,10 +120,6 @@
 					background-color: #777bb3;
 				}
 
-				.editor_json {
-					//height: 100vh;
-				}
-
 				iframe.php_info_iframe {
 					margin: 0;
 					padding: 0;
@@ -131,6 +127,12 @@
 				}
 			}//end php_info
 
+			&#search_query_object_test_enviroment {
+
+				#json_editor_container {
+					height: 50vh;
+				}
+			}
 
 			>.widget_label {
 				padding: 1em;
