--- a/lib/dedalo/page/css/layout/page.less
+++ b/lib/dedalo/page/css/layout/page.less
@@ -136,3 +136,14 @@ html {
 		color: #fd7600;
 	}
 
+
+
+// tinymce in full screen
+	.mce-fullscreen {
+		z-index: 9999999 !important;
+	}
+
+
+
+
+
