--- a/lib/dedalo/component_profile/html/component_profile_edit.phtml
+++ b/lib/dedalo/component_profile/html/component_profile_edit.phtml
@@ -1,12 +1,12 @@
 <?php
 
-	# VISUALIZADOR HTML	
+	# VISUALIZADOR HTML
 
-	
+
 	# html_delimiter
 	print component_common_draw::html_delimiter($component_name, $tipo, $parent, $label, 'in');
-	
-	print "<div class=\"wrap_component css_wrap_profile wrap_component_{$tipo}\" id=\"{$id_wrapper}\" 
+
+	print "<div class=\"wrap_component css_wrap_profile wrap_component_{$tipo}\" id=\"{$id_wrapper}\"
 	data-tipo=\"{$tipo}\"
 	data-lang=\"{$lang}\"
 	data-parent=\"{$parent}\"
@@ -16,23 +16,23 @@
 	data-component_name=\"{$component_name}\"
 	data-component_info='{$component_info}'
 	>";
-	
+
 	# ETIQUETA (LABEL)
 	$html_label = component_common_draw::draw_label($this);
-	
+
 	# CONTENIDO (INPUT)
 	$html_content = '';
 	switch($permissions) {
-			
-		case 0:	
+
+		case 0:
 			$html_content .= "";
 			break;
 
-		case 1:	
+		case 1:
 			$html_content .= $valor;
-			break;					
-		
-		case ($permissions>1):		
+			break;
+
+		case ($permissions>1):
 			$html_content .= " <select class=\"css_select_profile\" name=\"{$input_name}\" id=\"$identificador_unico\" onchange=\"component_profile.Save(this)\"
 			data-tipo=\"{$tipo}\"
 			data-lang=\"{$lang}\"
@@ -40,7 +40,7 @@
 			data-parent=\"{$parent}\"
 			data-dato=\"{$dato}\"
 			title=\"$html_title\">";
-			
+
 				if(empty($dato)) {
 					$checked = 'selected';
 				}else{
@@ -48,33 +48,33 @@
 				}
 				# First option (custom)
 				$html_content .= " <option value=\"0\" {$checked}> Custom </option>";
-				
+
 				# DB Options
-				foreach ($ar_select_values as $value => $rotulo) {					
-					
+				foreach ($ar_select_values as $value => $rotulo) {
+
 					$checked = ($value == $dato) ? 'selected' : '';
 
-					$html_content .= " <option value=\"{$value}\" {$checked}> {$rotulo}</option>";							
+					$html_content .= " <option value=\"{$value}\" {$checked}> {$rotulo}</option>";
 				}
 
-			$html_content .= " </select>";
+			$html_content .= '</select>';
 
 			/*
 			#$html_content .= "<div class=\"icon_bs icon_apply\"></div>";
 			$html_content .= " <input type=\"button\" value=\"".label::get_label('aplicar')."\" class=\"css_button_generic apply_profile_button\" onclick=\"component_profile.apply_profile(this)\">";
-			*/			
+			*/
 
 
 			#
-			# button_value
-			if ($is_global_admin===true) {
-				$button_value 	 = label::get_label('ir_al_perfil');
+			# button_value (Removed 27-11-2019)
+			#if ($is_global_admin===true) {
+				$button_value = label::get_label('ir_al_perfil');
 				$html_content .= " <input type=\"button\" value=\"$button_value\" class=\"btn btn-default btn-xs go_to_profile\" onclick=\"component_profile.go_to_profile(this, '$profile_section_tipo', '$identificador_unico')\">";
-			}
-		
-			
+			#}
+
+
 			if(SHOW_DEBUG) {
-				$html_content .= " <span class=\"debug_info\"> (Current dato: $dato)</span>";	
+				$html_content .= " <span class=\"debug_info\"> (Current dato: $dato)</span>";
 			}
 
 			#
@@ -87,22 +87,22 @@
 			$html_content .= 'component_common.init('.json_encode($init_options).');';
 			$html_content .= '</script>';
 			break;
-			
+
 	}
 
 	# Prepare content to show in page
 	tools::prepare_content($html_content);
-	
-	
+
+
 	# PRINT HTML
 	print $html_label;
-	print $html_content;	
-	
-	
-	print "</div>"; //wrap
+	print $html_content;
+
+
+	print '</div>'; //wrap
 
 
 	# html_delimiter
 	print component_common_draw::html_delimiter($component_name, $tipo, $parent, $label, 'out');
-	
-?>
+
+
